--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'themeFont1';
-    src: url(font/Inika-Regular.ttf);
+    src: url(Inika-Regular.ttf);
 }
 
 /* SECTION ONE STYLES */
