--- a/contact.css
+++ b/contact.css
@@ -553,6 +553,7 @@ footer {
  #sec1 {
   overflow: hidden;
  }
+
  }
 
  @media (max-width: 350px) {
@@ -561,3 +562,18 @@ footer {
   overflow: hidden;
  }
  }
+
+ @media (max-width: 270px) {
+
+ #sec1 {
+  overflow: hidden;
+ }
+ }
+
+ @media (max-width: 230px) {
+
+ #sec1 {
+  overflow: hidden;
+ }
+ }
+
