--- a/contact.css
+++ b/contact.css
@@ -547,26 +547,32 @@ footer {
 
 }
 
-
  @media (max-width: 380px) {
 
  #sec1 {
   overflow: hidden;
+  overflow-x:hidden;
  }
 
+ .overlay-text{
+   width:80%;
+ }
  }
 
  @media (max-width: 350px) {
 
  #sec1 {
   overflow: hidden;
+  overflow-x:hidden;
  }
+  
  }
 
  @media (max-width: 270px) {
 
  #sec1 {
   overflow: hidden;
+  overflow-x:hidden;
  }
  }
 
@@ -574,6 +580,6 @@ footer {
 
  #sec1 {
   overflow: hidden;
+  overflow-x:hidden;
  }
  }
-
