--- a/contact.css
+++ b/contact.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'themeFont1';
-    src: url(Inika-Regular.ttf);
+    src: url(font/Inika-Regular.ttf);
 }
 
 /* SECTION ONE STYLES */
@@ -547,39 +547,11 @@ footer {
 
 }
 
- @media (max-width: 380px) {
+@media (max-width: 295px) {
 
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
-
- .overlay-text{
-   width:80%;
- }
- }
-
- @media (max-width: 350px) {
-
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
+.head {
+  margin-top: 80px;
+}
   
- }
-
- @media (max-width: 270px) {
-
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
- }
-
- @media (max-width: 230px) {
-
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
- }
+  
+  }
