--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'themeFont1';
-    src: url(Inika-Regular.ttf);
+    src: url(font/Inika-Regular.ttf);
 }
 
 /* SECTION ONE STYLES */
@@ -18,7 +18,6 @@
   flex-direction: column;
   position: fixed;
   z-index: 10000;
-  overflow: hidden;
 }
 
 header{
@@ -383,6 +382,8 @@ aside ul li a:hover {
     align-items: center;
     text-align: left;
     padding: 20px 0%;
+    overflow: hidden;
+    
   }
 
   #sec5 p {
@@ -684,40 +685,8 @@ nav {
  
  }
 
-
  @media (max-width: 380px) {
-
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
-
- .overlay-text{
-   width:80%;
- }
- }
-
- @media (max-width: 350px) {
-
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
-  
- }
-
- @media (max-width: 270px) {
-
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
- }
-
- @media (max-width: 230px) {
-
- #sec1 {
-  overflow: hidden;
-  overflow-x:hidden;
- }
+  .overlay-text {
+    width: 80%;
+  }
  }
